<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Mottagare"></string>
    <string name="Meddelande"></string>
    <string name="SkapaMeddelande"></string>
    <string name="Cancel"></string>
    <string name="CreateNewMessage">Skapa Nytt Meddelande</string>
    <string name="title_activity_inbox">Inkorg</string>
    <string name="title_activity_display_of_conversation">Konverationer</string>
    <string name="sendMessage">Skicka</string>
    <string name="CreateANewMessage">Skapa nytt meddelande</string>
    <string name="cancel">Avbryt</string>
    <string name="save">Spara</string>
    <string name="contact">Kontakt</string>
    <string name="send">Skicka</string>
    <string name="receiver">Mottagare</string>
    <string name="message">Meddelande</string>
    <string name="takePicture">Ta Bild</string>
    <string name="makeMovie">Filma</string>
    <string name="cannot">Kan inte</string>
    <string name="album_name">Album</string>
    <string name="title_activity_camera">Camera</string>
    <string name="goAlbum">Album</string>
    <string name="app_name">Cryziz</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Meny</string>
    <string name="title_activity_map">Karta</string>
    <string name="map_label">Search location</string>
    <string name="search_hint">Search location</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="mark_region">Markera region</string>
    <string name="title_activity_dbtest">DBTest</string>
    <string name="Button">Test DB</string>
    <string name="title_activity_log_viewer">LogViewer</string>
    <string name="btnIntend">Ta bild</string>
    <string name="btnIntendS">Ta (liten) bild</string>
    <string name="btnIntendV">Spela in film</string>
    <string name="showAlbum">Album</string>
    <string name="title_activity_uppdragslista">Uppdragslista</string>
    <string name="title_activity_uppdrag">Uppdrag</string>
    <string name="title_activity_add_assignment">AddAssignment</string>
    <string name="title_activity_assignment_overview">AssignmentOverview</string>
    <string name="title_activity_create_new_message">Nytt meddelande</string>
    <string name="receiver_hint">Receiver</string>
    <string name="message_hint">Message</string>
    <string name="addAssignment">Skapa uppdrag</string>
    <string name="assignmentLocation">Uppdragets plats</string>
    <string name="streetAddress">Gatuadress</string>
    <string name="time">Uppskattad tid</string>
    <string name="assignmentDescription">Uppdragsbeskrivning</string>
    <string name="coordinates">Koordinater</string>
    <string name="assignmentName">Uppdragets namn</string>
    <string name="createAssignmentFromRegion">Skapa uppdrag för region</string>
    <string name="inbox">Inbox</string>
    <string name="new_message">Nytt meddelande</string>
    <string name="displayConversation">Konversation</string>
    <string name="uppdrag">Uppdrag</string>
    <string name="assignmentOverview">Uppdrag</string>
    <string name="password">Lösenord</string>
    <string name="userName">Användarnamn</string>
    <string name="title_activity_photo_gallery">PhotoGallery</string>
    <!-- added -->
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_login_function">Cryziz</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_sip_main">Samtal</string>
    <string name="title_activity_contacts_book">ContactsBookActivity</string>
    <string name="title_activity_camera_menu">CameraMenuActivity</string>
    <string name="title_activity_take_pictures">TakePicturesActivity</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_cam">Kamera</string>
    <string name="title_activity_qo_sinterface">Inställningar för batterisparläge</string>
    <string name="title_activity_call_dialog">Samtal</string>
    <string name="automaticQoS">Automatiskt QoS-läge</string>
    <string name="automaticBatterySaveModeText">Automatisk aktivering av batterisparläge är: </string>
    <string name="batterySaveOptions">Alternativ för batterisparläge:</string>
    <string name="denyMapFunction">Inaktivera Kartfunktion</string>
    <string name="denyMessageFunction">Inaktivera Meddelandefunktion</string>
    <string name="denyAssignmentFunction">Inaktivera Uppdragsfunktionen</string>
    <string name="denyCameraFunction">Inaktivera Kamerafunktionen</string>
    <string name="batterySaveOptionDetails">De val du fyller i här kommer att tillämpas då enheten försätts i batterisparläge</string>
    <string name="screenBrightness">Skärmstyrka</string>
    <string name="lowBatteryLevel">Nivå för lågt batteri</string>
    <string name="manualActivationForBatterySaveModeText">Batterisparläge är: </string>
    <string name="denyWiFiConnection">Inaktivera WiFi</string>
    <string name="defaultButton">Återgå till standardinställningar</string>
    <string name="QoS">QoS</string>
    <string name="discard">Discard</string>
    <string name="use">Save</string>
    <string name="denyContactBook">Inaktivera Kontaktlista</string>
    <string name="callDeny">Lägg på</string>
    <string name="callAnswer">Svara</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_call_log">CallLog</string>

</resources>