<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
<<<<<<< HEAD
        android:hint="reciver"
=======
        android:hint="@string/receiver_hint"
>>>>>>> e350331e54382fe04af42f1cb012854afcf9bb7a
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:ems="10"
<<<<<<< HEAD
        android:hint="message"
=======
        android:hint="@string/message_hint"
>>>>>>> e350331e54382fe04af42f1cb012854afcf9bb7a
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/editText2"
        android:gravity="center_vertical"
        android:onClick="sendMessage"
<<<<<<< HEAD
        android:text="send" />
=======
        android:text="@string/send" />
>>>>>>> e350331e54382fe04af42f1cb012854afcf9bb7a

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
        android:gravity="center_vertical"
        android:onClick="cancelButton"
<<<<<<< HEAD
        android:text="cancel"
=======
        android:text="@string/cancel"
>>>>>>> e350331e54382fe04af42f1cb012854afcf9bb7a
        android:layout_toRightOf="@+id/button1" />

</RelativeLayout>
